--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -128,7 +128,7 @@ jpn:
         # livestock_feed_stock: "Stock d’aliment du bétail"
         # locked_associated_accounts: "Associes comptes courants - comptes bloqués"
         # long_cycle_animals_inventory_variations: "Variations d’inventaires - animaux (cycle long)"
-        # long_cycle_cultures_advances: "Avances aux cultures (cycle long)"
+        # long_cycle_cultivation_advances: "Avances aux cultures (cycle long)"
         # long_cycle_vegetals_inventory_variations: "Variations d’inventaires - végétaux (cycle long)"
         # long_term_loans: "Emprunts à moyen et long terme"
         # long_term_loans_interests: "Intérêts des autres emprunts à moyen et long terme"
@@ -193,11 +193,11 @@ jpn:
         # service_animal_assets: "Animaux de service"
         # share_asset_subsidies: "Quote-part des subventions d’investissement virée au resultat de l’exercice"
         # short_cycle_animals_inventory_variations: "Variations d’inventaires - animaux (cycle court)"
-        # short_cycle_cultures_advances: "Avances aux cultures (cycle court)"
-        # short_cycle_cultures_advances_culturals_ways: "Avances aux cultures (cycle court) - Façons culturales"
-        # short_cycle_cultures_advances_fertilizers: "Avances aux cultures (cycle court) - Engrais et ammendement"
-        # short_cycle_cultures_advances_plants_medicines: "Avances aux cultures (cycle court) - Produits de défense des végétaux"
-        # short_cycle_cultures_advances_seeds: "Avances aux cultures (cycle court) - Semences et plants"
+        # short_cycle_cultivation_advances: "Avances aux cultures (cycle court)"
+        # short_cycle_cultivation_advances_culturals_ways: "Avances aux cultures (cycle court) - Façons culturales"
+        # short_cycle_cultivation_advances_fertilizers: "Avances aux cultures (cycle court) - Engrais et ammendement"
+        # short_cycle_cultivation_advances_plants_medicines: "Avances aux cultures (cycle court) - Produits de défense des végétaux"
+        # short_cycle_cultivation_advances_seeds: "Avances aux cultures (cycle court) - Semences et plants"
         # short_cycle_vegetals_inventory_variations: "Variations d’inventaires - végétaux (cycle court)"
         # short_term_loans: "Emprunts à court terme"
         # short_term_loans_interests: "Intérêts des emprunts à court terme"
@@ -1630,7 +1630,7 @@ jpn:
         # fungicide: "Fongicide"
         # gas: "Gaz"
         # grain: "Céréale"
-        # grain_crop: "Culture"
+        # grain_crop: "Culture à graines"
         # grass: "Herbe"
         # hay_rake: "Andaineur"
         # herbicide: "Herbicide"
@@ -1648,7 +1648,7 @@ jpn:
         # mixed_chemical_fertilizer: "Mélange d’engrais"
         # molluscicide: "Molluscicide"
         # mower: "Faucheuse"
-        # natural_water: "Eau de pluie / du puit"
+        # natural_water: "Eau de pluie ou de puit"
         # organic_fertilizer: "Engrais organique"
         # plow: "Charrue"
         # reaper: "Moissonneuse-batteuse"
@@ -1661,6 +1661,7 @@ jpn:
         # spreader: "Épandeur à engrais"
         # spreader_trailer: "Épandeur à fumier"
         # straw: "Paille"
+        # superficial_plow: "Déchaumeuse"
         # technician: "Technicien"
         # tractor: "Tracteur"
         # trailer: "Remorque"
