--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1370,7 +1370,7 @@ fra:
         animal_health: "Hygiène des animaux"
         animal_preventive_medicine_admission: "Traitement préventif des maladies animales" # animal_health
         animal_production: "Productions animales"
-        cleaning: "Nettoyage"                              # animal_production
+        cleaning: "Nettoyage"                              # animal_health
         consummables_addition: "Mise à niveau"             # maintenance
         cultipacking: "Cultipacking"                       # tillage
         fermentation: "Fermentation"                       # transformation
@@ -1385,14 +1385,12 @@ fra:
         maintenance: "Maintenance"
         milk_production: "Production laitière"             # animal_production
         oviparous_birth: "Reproduction (ovipare)"
-        pasturing: "Pâturage"                              # animal_feeding
         piece_replacement: "Remplacement de pièces"        # maintenance
         plant_fertilisation: "Fertilisation"
         plant_illness_treatment: "Protection des cultures"
         plowing: "Labour"                                  # tillage
         pruning: "Taille"
         raking: "Hersage"                                  # tillage
-        silage_autosupply: "Alimentation en libre service" # animal_feeding
         soil_cleaning: "Désinfection du sol"
         soil_enrichment: "Amendement"
         sowing: "Semis"                                    # implantation
