--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1925,6 +1925,7 @@ eng:
           # room: "salle"
           # round_bale: "Botte ronde"
           # small_rectangular_bale: "Botte rectangulaire petit format (100*40*40)"
+          # square_meter: "Mètre carré"
           # ton: "tonne"
           # unit: "unité"
       items:
@@ -2086,6 +2087,9 @@ eng:
         # land_parcel_cluster: "Îlot"
         # lavender_crop: "Culture de lavande"
         # lentil_crop: "Culture de lentille"
+        # liquid_10_25_d1.4: "Solution azotée binaire 10-25-0 densité 1.4"
+        # liquid_10_34_d1.4: "Solution azotée binaire 10-34-0 densité 1.4"
+        # liquid_nitrogen_30_d1.3: "Solution azotée 30-0-0 densité 1.3"
         # livestock_cleanliness_product: "Produit d’hygiène d’élevage"
         # male_adult_cow: "Taureau"
         # male_hen_band: "Bande de poulet"
@@ -2093,6 +2097,7 @@ eng:
         # manager: "Responsable"
         # manual_implanter: "Plantoir"
         # manure_division: "Fumière"
+        # market_gardening_crop: "Maraîchage"
         # melon_crop: "Culture de melon"
         # merlot_noir_so4_vine_seedling: "Plant de Merlot Noir sur so4"
         # milk_tank: "Tank à lait"
@@ -2102,6 +2107,7 @@ eng:
         # miradoux_hard_wheat_crop: "Culture de blé dur Miradoux"
         # miradoux_hard_wheat_seed_25: "Semence de blé dur Miradoux"
         # mixed_chemical_fertilizer: "Mélange d’engrais"
+        # mixed_liquid_fertilizer: "Mélange d’engrais liquide"
         # mixture_seed: "Semence mixte"
         # mixture_vetch_oat_pea_crop: "Mélange Vesce-Avoine-Pois"
         # molluscicide: "Molluscicide"
@@ -2282,6 +2288,7 @@ eng:
         # milk_tank: "Tank à lait"
         # mineral_cleaner: "Nettoyant chimique"
         # mixed_chemical_fertilizer: "Mélange d’engrais"
+        # mixed_liquid_fertilizer: "Mélange d’engrais liquide"
         # molluscicide: "Molluscicide"
         # motor_oil: "Huile moteur"
         # mower: "Faucheuse"
@@ -2379,6 +2386,8 @@ eng:
         # laying_hen: "Poule pondeuse"
         # lentil: "Lentille"
         # maintenance: "Maintenance"
+        # market_gardening: "Maraîchage"
+        # market_gardening_under_greenhouse: "Maraîchage sous serre"
         marketing: "Marketing" #?
         # melon: "Melon"
         # milk_bull_calf: "Taurillons Lait"
@@ -2865,6 +2874,26 @@ eng:
         # vicia: "Vesces - Féverolle"
         # vitis: "Vigne"
         # vitis_vinifera: "Vitis vinifera"
+        # vitis_vinifera_cabernet_franc_noir: "Vitis vinifera - cabernet franc noir"
+        # vitis_vinifera_cabernet_sauvignon_noir: "Vitis vinifera - cabernet sauvignon noir"
+        # vitis_vinifera_carignan: "Vitis vinifera - carignan"
+        # vitis_vinifera_carmenere_noir: "Vitis vinifera - carmenere noir"
+        # vitis_vinifera_chardonnay: "Vitis vinifera - chardonnay"
+        # vitis_vinifera_colombar_blanc: "Vitis vinifera - colombar blanc"
+        # vitis_vinifera_cot_noir: "Vitis vinifera - cot noir"
+        # vitis_vinifera_grenache: "Vitis vinifera - grenache"
+        # vitis_vinifera_grenache_noir: "Vitis vinifera - grenache noir"
+        # vitis_vinifera_merlot_blanc: "Vitis vinifera - merlot blanc"
+        # vitis_vinifera_merlot_noir: "Vitis vinifera - merlot noir"
+        # vitis_vinifera_muscadelle_blanc: "Vitis vinifera - muscadelle blanc"
+        # vitis_vinifera_petit_verdot_noir: "Vitis vinifera - petit verdot noir"
+        # vitis_vinifera_pinot_noir: "Vitis vinifera - pinot noir"
+        # vitis_vinifera_sauvignon_blanc: "Vitis vinifera - sauvignon blanc"
+        # vitis_vinifera_sauvignon_gris: "Vitis vinifera - sauvignon gris"
+        # vitis_vinifera_sauvignon_noir: "Vitis vinifera - sauvignon noir"
+        # vitis_vinifera_semillon_blanc: "Vitis vinifera - semillon blanc"
+        # vitis_vinifera_syrah_noir: "Vitis vinifera - syrah noir"
+        # vitis_vinifera_ugni_blanc: "Vitis vinifera - ugni blanc"
         # walnut: "Noyer"
         # water: "Eau"
         # wine: "Vin"
